dfir_rs/tests/compile-fail-stable/surface_partition_port_extra.stderr
error: Argument specifying the output ports in `partition(..)` does not contain extra port `d`: (unknown:15:21) (1/2).
 --> tests/compile-fail-stable/surface_partition_port_extra.rs:5:63
  |
5 |         my_partition = source_iter(0..10) -> partition(|item, [a, b, c]| {
  |                                                               ^^^^^^^^^

error: Port `d` not found in the arguments specified in `partition(..)`'s closure: (unknown:5:62) (2/2).
  --> tests/compile-fail-stable/surface_partition_port_extra.rs:15:22
   |
15 |         my_partition[d] -> for_each(std::mem::drop);
   |                      ^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
  --> tests/compile-fail-stable/surface_partition_port_extra.rs:17:8
   |
17 |     df.run_available_sync();
   |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
